--- a/300x250/index.html
+++ b/300x250/index.html
@@ -27,6 +27,8 @@
               <div id="bradT2" class="bradTOpacity"></div>
               <div id="bradT3" class="bradTOpacity"></div>
               <div id="bradT4" class="bradTOpacity"></div>
+              <div id="bradT5" class="bradTOpacity"></div>
+              <div id="bradT6" class="bradTOpacity"></div>
               
               <div id="bradFooter">
                  <div id="bradFooterImageContainer"></div>
