--- a/300x250/index.html
+++ b/300x250/index.html
@@ -23,7 +23,7 @@
               <div id="bradSvg2Container" class="bradSwoosh">                
              </div>
               
-              <div id="bradT1"></div>
+              <div id="bradT1" class="bradTOpacity"></div>
               <div id="bradT2" class="bradTOpacity"></div>
               <div id="bradT3" class="bradTOpacity"></div>
               <div id="bradT4" class="bradTOpacity"></div>
